--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "pnpm start:dev",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\" \"*.js\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
